--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,23 +1,46 @@
 <div class="container">
-  <form class="sign-in-form">
+  <form
+    class="sign-in-form"
+    #signInForm="ngForm"
+    (ngSubmit)="onSubmit(signInForm)"
+  >
     <h2>Sign in</h2>
     <div class="row-control">
       <mat-form-field appearance="outline">
         <mat-label>Username</mat-label>
-        <input matInput placeholder="Username" />
+        <input
+          matInput
+          placeholder="Username"
+          [ngModel]="userInfo.userName"
+          name="username"
+        />
       </mat-form-field>
     </div>
     <div class="row-control">
       <mat-form-field appearance="outline">
         <mat-label>Password</mat-label>
-        <input type="password" matInput placeholder="Password" />
+        <input
+          type="password"
+          matInput
+          placeholder="Password"
+          [ngModel]="userInfo.password"
+          name="password"
+        />
       </mat-form-field>
     </div>
     <div class="row-control">
-      <mat-checkbox>Remember me</mat-checkbox>
+      <mat-checkbox [ngModel]="userInfo.rememberMe" name="rememberMe"
+        >Remember me</mat-checkbox
+      >
     </div>
     <div class="row-control row-actions">
       <button mat-raised-button color="primary" type="submit">Sign in</button>
     </div>
+    <pre>
+       userInfo {{ userInfo | json }}
+    </pre>
+    <pre>
+      {{ signInForm.value | json }}
+    </pre>
   </form>
 </div>
