--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -11,9 +11,30 @@
         <input
           matInput
           placeholder="Username"
-          [ngModel]="userInfo.userName"
+          [(ngModel)]="userInfo.userName"
           name="username"
+          required
+          minlength="6"
+          maxlength="32"
+          [pattern]="usernamePattern"
+          #username="ngModel"
         />
+        <mat-error *ngIf="username.touched && !username.valid">
+          <span *ngIf="username.errors?.['required']"
+            >Username is required</span
+          >
+          <span
+            *ngIf="username.errors?.['minlength'] || username.errors?.['maxlength']"
+            >Length from 6 to 32 characters</span
+          >
+          <span
+            *ngIf="
+              !(username.errors?.['minlength'] || username.errors?.['maxlength']) &&
+              username.errors?.['pattern']
+            "
+            >Only alphabet</span
+          >
+        </mat-error>
       </mat-form-field>
     </div>
     <div class="row-control">
@@ -23,9 +44,31 @@
           type="password"
           matInput
           placeholder="Password"
-          [ngModel]="userInfo.password"
+          required
+          minlength="6"
+          maxlength="32"
+          [pattern]="passwordPattern"
+          #password="ngModel"
+          [(ngModel)]="userInfo.password"
           name="password"
         />
+        <mat-error *ngIf="password.touched && !password.valid">
+          <span *ngIf="password.errors?.['required']"
+            >Password is required</span
+          >
+          <span
+            *ngIf="password.errors?.['minlength'] || password.errors?.['maxlength']"
+            >Length from 6 to 32 characters</span
+          >
+          <span
+            *ngIf="
+              !(password.errors?.['minlength'] || password.errors?.['maxlength']) &&
+              password.errors?.['pattern']
+            "
+          >
+            Only alphabet, digit and at least one of !@#$%^&*
+          </span>
+        </mat-error>
       </mat-form-field>
     </div>
     <div class="row-control">
@@ -41,6 +84,9 @@
     </pre>
     <pre>
       {{ signInForm.value | json }}
+    </pre>
+    <pre>
+      {{ username.errors | json }}
     </pre>
   </form>
 </div>
